# time-manager

./: .gitignore  .pre-commit-config.yaml  README.md  TODOS.md  design-implementation-notes.html  future-implementation-with-autoplan-notes.html  plan_part_for_time_manager.md  pyproject.toml  time-manager-mega-plan-implementation.md  ui-session-update.html
docs/designs/: temporal-knowledge-graph.md  time-manager-current-state-autoplan.md
docs/orchestration/: task-registry.md
docs/release/: goals.md  outcome_scoring.md  process_mining.md  v1.md  vocabulary.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
migrations/: 0001_init.sql  0002_cost_ledger.sql  0003_goals.sql  0004_vocab.sql  0005_events_advances_goal.sql  0006_events_xes_columns.sql  0007_suggestion_telemetry.sql  0008_goals_name_check.sql  0009_goals_name_check_tighten.sql  0010_debrief_summary_uniqueness.sql  0011_capture_transcripts_privacy.sql
tests/: conftest.py  test_daemon.py  test_security.py  test_smoke.py  test_vocab_alignment.py
tests/agents/: test_debrief.py  test_scheduler.py
tests/commands/: test_bottlenecks_cli.py  test_capture_cli.py  test_daemon_cli.py  test_dashboard_export_cli.py  test_dashboard_export_privacy_cli.py  test_debrief_cli.py  test_discover_cli.py  test_encryption_cli.py  test_goal_cli.py  test_init_cli.py  test_privacy_cli.py  test_suggest_cli.py  test_variants_cli.py  (+2 more)
tm/: __main__.py  _paths.py  cli.py  daemon.py  local_agents.py  resilience.py  security.py  store.py  vocab_alignment.py  vocab_alignment_errors.py
(+100 files in other folders)
