[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "tm"
version = "0.0.1"
description = "Time manager CLI — behavioral time tracking from end-of-day conversations."
requires-python = ">=3.11"
dependencies = [
    "typer~=0.12",
    "anthropic>=0.40,<1",
    "pm4py>=2.7,<3",
    # T-PM-03: Kuzu graph DB for persisted Petri net projection. The original
    # plan called for `>= 0.3, < 0.5`, but those releases ship no wheels for
    # current Python versions and force a (failing) source build, so we widen
    # the pin to `>= 0.11, < 1` which has prebuilt wheels and a stable API.
    "kuzu>=0.11,<1",
]

[project.scripts]
tm = "tm.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "hypothesis>=6,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["tm"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
